# net_http

./: .bazelrc  .gitignore  README.md  WORKSPACE
bazel/: BUILD.bazel  extra_deps.bzl  net_http_deps.bzl
client/test_client/internal/: BUILD  evhttp_connection.cc  evhttp_connection.h
client/test_client/public/: httpclient.h  httpclient_interface.h
client/test_client/testing/: BUILD  evhttp_echo_client.cc
compression/: BUILD  gzip_zlib.cc
docs/: README.md
http2/: .gitignore  CMakeLists.txt  Makefile  benchmark.py  client.c  client.cc  grpc_client.cc  grpc_server.cc  results.txt  server.c  server.cc
http2/proto/: echo.proto
internal/: BUILD  net_logging.cc
internal/testing/: BUILD
net_http/client/test_client/benchmark/: BUILD  evhttp_echo_client_benchmark.cc
net_http/client/test_client/internal/: BUILD  evhttp_connection.cc  evhttp_connection.h
net_http/client/test_client/public/: BUILD  httpclient.h  httpclient_interface.h
net_http/client/test_client/testing/: BUILD  evhttp_echo_client.cc
net_http/compression/: BUILD  gzip_zlib.cc  gzip_zlib.h  gzip_zlib_test.cc
net_http/internal/: fixed_thread_pool.h  net_logging.cc  net_logging.h
net_http/internal/testing/: net_logging_example.cc
net_http/public/: BUILD  header_names.cc  header_names.h  response_code_enum.h
net_http/server/internal/: BUILD  evhttp_request.cc  evhttp_request.h  evhttp_request_test.cc  evhttp_server.cc  evhttp_server.h  evhttp_server_test.cc  server_support.h
net_http/server/public/: BUILD  httpserver.h  httpserver_interface.h  server_request_interface.h
net_http/server/testing/: BUILD  evhttp_echo_server.cc
net_http/socket/testing/: ev_fetch_client.cc  ev_print_req_server.cc
public/: BUILD  header_names.cc
server/internal/: BUILD  evhttp_request.cc  evhttp_request_test.cc  evhttp_server.cc  evhttp_server.h  server_support.h
server/public/: BUILD
skills/repo-tools/: SKILL.md
webchannel/: README.md
webchannel/js/demo/: .gitignore  demo.ts  index.html  package-lock.json  package.json  server.js
webchannel/js/imported_src/: channel.js  channelrequest.js  connectionstate.js  environment.js  netutils.js  requeststats.js  webchannelbase.js  webchannelbasetransport.js  webchanneldebug.js  wire.js  wirev8.js
webchannel/js/imported_src/tests/: channelrequest_test.js  forwardchannelrequestpool_test.js  webchannelbase_test.js  webchannelbasetransport_test.js  wirev8_test.js
webchannel/objc/: WebChannel.podspec
webchannel/objc/imported_src/: WCChannelRequest.h  WCChannelRequest.m  WCConnectionState.h  WCConnectionState.m  WCDefaultSupport.h  WCDefaultSupport.m  WCDispatcher.h  WCDispatcher.m  WCEventNotification.h  WCEventNotification.m  WCFailureRecoveryContext.h  WCFailureRecoveryContext.m  WCForwardChannelRequestPool.h  WCForwardChannelRequestPool.m  WCInternalChannelParams.h  WCInternalChannelParams.m  WCOptions.h  WCOptions.m  WCQueuedMap.h  WCQueuedMap.m  WCRuntimeProperties+Private.h  WCRuntimeProperties.h  WCRuntimeProperties.m  WCSupport.h  WCTimer.h  WCWebChannelClient.h  WCWebChannelClient.m  WCWebChannelClientInternal.h  WCWebChannelClientInternal.m  WCWebChannelClientProtocol.h  WCWebChannelClientReadWrite.h  WCWireV8.h  WCWireV8.m  WCWireV8Binary.h  WCWireV8Binary.m
webchannel/objc/imported_src/Support/: WCDefaultHTTPRequest.h  WCDefaultHTTPRequest.m  WCDefaultJSONDecoder.h  WCDefaultJSONDecoder.m  WCDefaultLogger.h  WCDefaultLogger.m  WCDefaultURLEncoder.h  WCDefaultURLEncoder.m  WCFakeHTTPRequest.h  WCFakeHTTPRequest.m  WCHTTPRequest.h  WCJSONDecoder.h  WCLogger.h  WCLogger.m  WCURLEncoder.h
webchannel/objc/imported_src/Tests/: WCChannelRequestTest.m  WCDefaultSupportTest.m  WCWebChannelClientTest.m  WCWireV8BinaryTest.m
wish/cpp/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.benchmark  Dockerfile.echo_server  README.md
wish/cpp/benchmark/: CMakeLists.txt  benchmark.py  client.cc  high_qps_client.cc  plain_client.cc  tls_client.cc
wish/cpp/certs/: ca.crt  ca.key  ca.srl  client.crt  client.csr  client.key  server.crt  server.csr  server.key
wish/cpp/deployments/: benchmark.yaml  echo-server.yaml  stress.yaml  tls-echo-server.yaml
wish/cpp/examples/: CMakeLists.txt  benchmark_client.cc  client.cc  echo_server.cc  h2_echo_server.cc  h2_hello_client.cc  h2_tls_echo_server.cc  h2_tls_hello_client.cc  hello_client.cc  plain_echo_server.cc  plain_hello_client.cc  server.cc  tls_echo_server.cc  tls_hello_client.cc
wish/cpp/patches/: wslay-disable-mask.patch  wslay.patch
wish/cpp/scripts/: build-and-push.sh
wish/cpp/src/: buffer_event_web_stream.cc  buffer_event_web_stream.h  buffer_event_web_stream_test.cc  h2_client.cc  h2_client.h  h2_server.cc  h2_server.h  h2_tls_client.cc  h2_tls_client.h  h2_tls_server.cc  h2_tls_server.h  h2_wish_stream.cc  h2_wish_stream.h  h2_wish_stream_test.cc  handshake.cc  handshake.h  handshake_test.cc  nghttp2_web_stream.cc  nghttp2_web_stream.h  nghttp2_web_stream_test.cc  plain_client.cc  plain_client.h  plain_server.cc  plain_server.h  socket_utils.cc  socket_utils.h  tls_client.cc  tls_client.h  tls_context.cc  tls_context.h  tls_server.cc  tls_server.h  web_stream.h  wish_handler.cc  wish_handler.h  wish_handler_test.cc  wish_opcodes.h
wish/python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
wish/python/src/: web_stream_ext.cc  wish_ext.cc
wish/python/tests/: test_callback_exceptions.py  test_client.py  test_dangling_pointer.py  test_e2e.py
wish/python/web_stream/: __init__.py  client.py
wish/python/wish/: __init__.py  client.py
