add_executable(benchmark_client
    client.cc
)
target_link_libraries(benchmark_client
    wish_handler
    absl::flags
    absl::flags_parse
    absl::log
    absl::log_initialize
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,absl::log_flags>"
    benchmark::benchmark
)

add_executable(tls_benchmark_client
    tls_client.cc
)
target_link_libraries(tls_benchmark_client
    wish_handler
    absl::flags
    absl::flags_parse
    absl::log
    absl::log_initialize
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,absl::log_flags>"
    benchmark::benchmark
)