add_executable(plain_benchmark_client
    plain_client.cc
)
target_link_libraries(plain_benchmark_client
    web_stream
    absl::flags
    absl::flags_parse
    absl::log
    absl::log_initialize
    # Based on https://github.com/abseil/abseil-cpp/discussions/1474
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,absl::log_flags>"
    benchmark::benchmark
)

add_executable(high_qps_benchmark_client
    high_qps_client.cc
)
target_link_libraries(high_qps_benchmark_client
    web_stream
    absl::flags
    absl::flags_parse
    absl::log
    absl::log_initialize
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,absl::log_flags>"
    benchmark::benchmark
)

add_executable(tls_benchmark_client
    tls_client.cc
)
target_link_libraries(tls_benchmark_client
    web_stream
    absl::flags
    absl::flags_parse
    absl::log
    absl::log_initialize
    "$<LINK_LIBRARY:WHOLE_ARCHIVE,absl::log_flags>"
    benchmark::benchmark
)